hphp/test/quick/dynamic_eval.php.expectf

Fatal error: Call to undefined function eval() in %s on line 5
